--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,9 @@
         </div>
       </div>
 
+
+
+
       <div id="step-6" class="step animation-box" data-x="8400" data-y="-1600" data-z="-1500" data-scale="2"> 
         <h2>迅捷响应交互行为</h2>
         <p>
@@ -93,6 +96,9 @@
         <img src="images/animation_5.gif" />
         <img src="images/animation_6.gif" />
         <img src="images/animation_7.gif" />
+      </div>
+
+      <div id="step-7" class="step animation-box" data-x="8400" data-y="-1600" data-z="-1500" data-scale="2"> 
       </div>
 
 
