material design done

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>android share</title>
+    <title>material design</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
@@ -26,14 +26,21 @@
 
       <div id="step-1" class="step" data-x="0" data-y="0" data-z="0">
         <div id="capitel">
-          <h2 class="font-big">Android 分享</h2>
+          <h2 class="font-big">material design</h2>
           <address class="float-right">
-              by 黄世凡 | 
+              by {Wait} | 
               blog: <a href="http://blog.h4fan.com">http://blog.h4fan.com</a>
           </address>
         <div>
         <div id="step-1-bandage">
-            请使用↑↓←→来控制
+            <p>请使用↑↓←→来控制</p>
+        </div>
+        <div>
+        <pre>
+        更多meterial design信息：
+        <a href="http://developer.android.com/design/material/index.html">http://developer.android.com/design/material/index.html</a> 
+        或者
+        <a href="http://www.ui.cn/Material/index.html">http://www.ui.cn/Material/index.html</a></pre>
         </div>
       </div>
 
@@ -98,25 +105,64 @@
         <img src="images/animation_7.gif" />
       </div>
 
-      <div id="step-7" class="step animation-box" data-x="8400" data-y="-1600" data-z="-1500" data-scale="2"> 
+      <div id="step-7" class="step animation-box" data-x="8400" data-y="-1600" data-z="-1510" data-rotate-y="-180" data-scale="2">
+        <h2>最佳实践</h2>
+        <p>视觉反馈在特定的输入点出现：例如手指与屏幕的接触点，或是麦克风图标处。</p>
+        <img src="images/animation_8.gif" />
+        <p>
+        触控涟漪-按压/释放
+        </p>
+        <img src="images/animation_9.gif" />
       </div>
 
 
-      <div class="step animation-box" data-x="10000" data-y="-1600" data-z="-1500" data-scale="2"> This is slide 5 </div>
+
+      <div id="step-8" class="step animation-box" data-x="11600" data-y="-1600" data-z="-1500" data-scale="2">
+        <h2>最佳实践</h2>
+        <p>
+          以触控点为原点的动效反馈，应该：
+        </p>
+        <img src="images/animation_10.gif" />
+        <p>
+          不应该：
+        </p>
+        <img src="images/animation_11.gif" />
+      </div>
 
 
-      <div class="step animation-box" data-x="11600" data-y="-1600" data-z="-1500" data-scale="2"> This is slide 6 </div>
+
+      <div id="step-9" class="step animation-box" data-x="11600" data-y="0" data-z="-1500" data-scale="2">
+        <h2>有意义的转场效果</h2>
+        <p>对于用户来说，很难弄清楚应该在应用的何处集中注意力，也很难搞清元素是如何从A点运动到B点的。审慎、精心设计的动效能够高效引导用户的视觉注意点，让整体效果循序渐进，避免用户因为元素重新排列或者布局改变而感到混淆。同时提升整体的美感和使用体验。动效设计不应该仅仅美丽，而且还应该具备功能性目的。</p>
+        <img src="images/animation_12.gif" />
+        <img src="images/animation_13.gif" />
+        <img src="images/animation_14.gif" />
+      </div>
 
 
+      <div id="step-10" class="step animation-box" data-x="11600" data-y="1600" data-z="-1500" data-scale="2">
+        <h2>视觉连贯性</h2>
+        <img src="images/animation_15.gif" />
+        <img src="images/animation_16.gif" />
+      </div>
 
-      <div class="step animation-box" data-x="11600" data-y="0" data-z="-1500" data-scale="2"> This is slide 7 </div>
 
-
-      <div class="step animation-box" data-x="11600" data-y="1600" data-z="-1500" data-scale="2"> This is slide 8 </div>
-
-
-      <div class="step animation-box" data-x="10000" data-y="1600" data-z="-1500" data-scale="2"> This is slide 9 </div>
-      <div class="step animation-box" data-x="8400" data-y="1600" data-z="-1500" data-scale="2"> This is slide 10 </div>
+      <div id="step-11" class="step animation-box" data-x="10000" data-y="1600" data-z="-1500" data-scale="2">
+        <h2>富有层次的时间感。</h2>
+        <p>在构建转场效果时，要考虑哪些元素需要运动，他们的运动的持续时间又是多久，从何时开始，何时结束？确保动效能够表达出信息层级。这样用户便可知道哪些元素最为重要，并且创建视觉轨迹</p>
+        <p>最重要的元素最先出现，最次要的最后出现，但是这并不是定式。转场元素的运动要具备分明的时间感，整体流畅而不杂乱。</p>
+        <p>应该：</p>
+        <img src="images/animation_17.gif" />
+        <p>不应该：</p>
+        <img src="images/animation_18.gif" />
+      </div>
+      <div id="step-12" class="step animation-box" data-x="8400" data-y="1600" data-z="-1500" data-scale="2">
+        <h2>细节愉悦用户</h2>
+        <p>在应用中大大小小的元素都可以进行动效设计，无论是细腻的图标小动效，或是整体的关键性转场效果和交互动效。所有的元素紧密合作，一致构建出无缝的使用体验，让应用美丽而具功能性。</p>
+        <p>动效的最基本使用在于转场动效，除了这种显而易见的地方，应用还应该在一些小处愉悦用户。比方说菜单图标会因为点击而变成箭头：除了能够提示用户操作，而且能让用户感受到惊喜。用户会关注这些小处的细节。</p>
+        <img src="images/animation_19.gif" />
+        <img src="images/animation_20.gif" />
+      </div>
     </div>
 
 
